choose routing path from more 2-hops packets and next hop is in table

--- a/scratch/tdma-rl/training.ipynb
+++ b/scratch/tdma-rl/training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,15 +43,28 @@
     "\n",
     "max_throughput = 25*576*20\n",
     "episode_time = 600\n",
-    "eval_model_weights_path = '/workspace/exp_replay_model/eval_model_weights'\n",
-    "target_model_weights_path = '/workspace/exp_replay_model/target_model_weights'\n"
+    "eval_model_weights_path = '/workspace/20pkt_traffic_model/eval_model_weights'\n",
+    "target_model_weights_path = '/workspace/20pkt_traffic_model/target_model_weights'\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Got new port for ns3gm interface:  9140\n",
+      "Start command:  /tf/ns3-gym/waf --run \"tdma-rl --openGymPort=9140 --simSeed=1601973933\"\n",
+      "Started ns3 simulation script, Process Id:  32207\n",
+      "Observation space:  Dict(pktBytes:Box(4,), slotUsedTable:Box(32,)) None\n",
+      "Action space:  Box(32,) int64\n",
+      "n_action:  32\n"
+     ]
+    }
+   ],
    "source": [
     "#env = gym.make('ns3-v0')\n",
     "env = ns3env.Ns3Env(debug=True)\n",
@@ -71,9 +84,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Create new model\n"
+     ]
+    }
+   ],
    "source": [
     "eval_model = Eval_Model(num_actions=ac_space.shape[0])\n",
     "target_model = Target_Model(num_actions=ac_space.shape[0])\n",
@@ -92,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,9 +196,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-----------------------episodes:  0  (Testing)-----------------------\n",
+      "Step:  120000\n",
+      "done\n",
+      "Throughput(Byte) : 55928.0\n",
+      "delay(μs) : 73079.0\n"
+     ]
+    }
+   ],
    "source": [
     "for episode in range(training_episodes):\n",
     "\n",
