--- a/scratch/tdma-rl/training.ipynb
+++ b/scratch/tdma-rl/training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,50 +23,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# loss function learning rate\n",
     "learning_rate = 0.001\n",
+    "# discount factor\n",
     "reward_decay = 0.9\n",
+    "# 10% random select\n",
     "e_greedy = 0.9\n",
+    "# copy weight from eval_net to target_net each N iter\n",
     "replace_target_iter = 100\n",
+    "# size of experience pool\n",
     "memory_size = 5000\n",
     "batch_size = 32\n",
-    "training_episodes = 1\n",
-    "max_choice = 3\n",
+    "training_episodes = 20\n",
+    "# MAXSLOTS\n",
+    "MAXSLOTS = 3\n",
     "optimized_choice = []\n",
     "throughput_list = []\n",
     "throughput_history = []\n",
     "delay_list = []\n",
     "delay_history = []\n",
     "\n",
-    "max_throughput = 25*576*20\n",
+    "max_throughput = 25*576*15\n",
     "episode_time = 600\n",
+    "# model path (Need to change)\n",
     "eval_model_weights_path = '/workspace/20pkt_traffic_model/eval_model_weights'\n",
     "target_model_weights_path = '/workspace/20pkt_traffic_model/target_model_weights'\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Got new port for ns3gm interface:  9140\n",
-      "Start command:  /tf/ns3-gym/waf --run \"tdma-rl --openGymPort=9140 --simSeed=1601973933\"\n",
-      "Started ns3 simulation script, Process Id:  32207\n",
-      "Observation space:  Dict(pktBytes:Box(4,), slotUsedTable:Box(32,)) None\n",
-      "Action space:  Box(32,) int64\n",
-      "n_action:  32\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#env = gym.make('ns3-v0')\n",
+    "# create ns3 environment\n",
+    "#env = gym.make('ns3-v0') # issue of socket\n",
     "env = ns3env.Ns3Env(debug=True)\n",
     "\n",
     "#env.reset()\n",
@@ -84,39 +79,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Create new model\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# initiailize eval_net target_net\n",
     "eval_model = Eval_Model(num_actions=ac_space.shape[0])\n",
     "target_model = Target_Model(num_actions=ac_space.shape[0])\n",
     "try:\n",
+    "    # load weight from file\n",
     "    eval_model.load_weights(eval_model_weights_path)\n",
     "    target_model.load_weights(target_model_weights_path)\n",
     "    print('Load weights from ',eval_model_weights_path,\" and \",target_model_weights_path)\n",
     "except:\n",
     "    print('Create new model')\n",
     "\n",
-    "    \n",
-    "RL = DeepQNetwork(ac_space.shape[0], max_choice, ob_space_n,\n",
+    "# create DQN model\n",
+    "RL = DeepQNetwork(ac_space.shape[0], MAXSLOTS, ob_space_n,\n",
     "                  eval_model, target_model, learning_rate, reward_decay, e_greedy, \n",
     "                  replace_target_iter, memory_size, batch_size)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# select slot only base on distance\n",
     "def slot_scoring(obs):\n",
     "    #values = np.random.random_sample((32,)) / 20\n",
     "    \n",
@@ -156,10 +146,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# random select N slot \n",
     "def random_select(obs, max_slot):\n",
     "    nonusedSlot = np.where(obs==0)[0]\n",
     "    action = np.sort(np.random.choice(nonusedSlot,max_slot,replace=False))\n",
@@ -169,26 +160,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def slot_select(q_values, choosable_slotNum, slot_table):\n",
+    "# slot selection module\n",
+    "def slot_select(q_values, free_slotNum, slot_table):\n",
     "    # get top N value of q value\n",
     "    q_values[np.nonzero(slot_table)] = -np.inf\n",
-    "    action_unsort = np.argpartition(q_values,-max_choice)[-max_choice:]\n",
+    "    action_unsort = np.argpartition(q_values,-MAXSLOTS)[-MAXSLOTS:]\n",
     "    \n",
     "    # sort action num by q value\n",
     "    action = action_unsort[np.argsort(-1*q_values[action_unsort])]\n",
     "    \n",
     "    \n",
-    "    max_choosable_slotNum = min(choosable_slotNum, max_choice)\n",
-    "    # Using the queuing bytes to decide how many data slot would be choose\n",
+    "    max_choosable_slotNum = min(free_slotNum, MAXSLOTS)\n",
+    "    # Using the queuing bytes to determine how many data slot would be choose\n",
     "    action_num = 0 if queueBytes == 0 else min(max(0, int(queueBytes/6250 - 0.3)) + 1, max_choosable_slotNum)\n",
     "        \n",
-    "    action[action_num:] = [-1] * (max_choice-action_num)\n",
+    "    action[action_num:] = [-1] * (MAXSLOTS-action_num)\n",
     "    \n",
-    "    # sort action num\n",
+    "    # Sort action num\n",
     "    action[:action_num] = np.sort(action[:action_num])\n",
     "    \n",
     "    return action"
@@ -196,25 +188,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-----------------------episodes:  0  (Testing)-----------------------\n",
-      "Step:  120000\n",
-      "done\n",
-      "Throughput(Byte) : 55928.0\n",
-      "delay(μs) : 73079.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for episode in range(training_episodes):\n",
-    "\n",
-    "    isTraining = False #True if (episode+1)%10 != 0 else False\n",
+    "for episode in range(1):\n",
+    "    # For each 10 round, would have 1 round stop update model and select slot without 10% random select\n",
+    "    isTraining = True if (episode+1)%10 != 0 else False\n",
     "    if isTraining:\n",
     "        print (\"-----------------------episodes: \", episode, \" (Training)----------------------\")\n",
     "    else:\n",
@@ -227,10 +207,11 @@
     "    throughput = 0\n",
     "    delay = 0\n",
     "    \n",
+    "    # Initial environment\n",
     "    _obs = env.reset()\n",
     "    queueBytes = _obs[1][0]\n",
     "    \n",
-    "    choosable_slotNum = min(n_slotUsedTable - np.nonzero(_obs[0])[0].size,max_choice)\n",
+    "    free_slotNum = min(n_slotUsedTable - np.nonzero(_obs[0])[0].size,MAXSLOTS)\n",
     "    \n",
     "    _obs = np.array(list(_obs[0]) + list(_obs[1][1:]))\n",
     "    _obs = np.pad(_obs,(0, ob_space_n - _obs.size), constant_values = 0)\n",
@@ -239,13 +220,19 @@
     "    while True:\n",
     "        stepIdx += 1\n",
     "\n",
-    "        action = np.array(slot_select(RL.choose_action(_obs, isTraining),choosable_slotNum,_obs[:n_slotUsedTable]))\n",
+    "        # Get Action\n",
+    "        # Select slot by RL algorithm\n",
+    "        action = np.array(slot_select(RL.choose_action(_obs, isTraining),free_slotNum,_obs[:n_slotUsedTable]))\n",
     "        \n",
+    "        # Select slot by random select 2 slot\n",
     "        #action = np.array(random_select(_obs,2))\n",
-    "        #action = np.array(slot_select(np.random.random_sample(ac_space.shape[0]),choosable_slotNum,_obs[:n_slotUsedTable]))\n",
-    "        #action = np.array(slot_select(slot_scoring(_obs),choosable_slotNum,_obs[:n_slotUsedTable]))\n",
+    "        # Select slot by random select with queued information\n",
+    "        #action = np.array(slot_select(np.random.random_sample(ac_space.shape[0]),free_slotNum,_obs[:n_slotUsedTable]))\n",
+    "        # Select slot by rule (distance reward)\n",
+    "        #action = np.array(slot_select(slot_scoring(_obs),free_slotNum,_obs[:n_slotUsedTable]))\n",
     "        \n",
     "        #print(\"---action: \", action)\n",
+    "        # Interact with environment\n",
     "        obs, reward, done, info = env.step(action)\n",
     "\n",
     "        \n",
@@ -263,7 +250,8 @@
     "            \n",
     "            break\n",
     "        \n",
-    "        choosable_slotNum = min(n_slotUsedTable - np.nonzero(obs[0])[0].size,max_choice)\n",
+    "        # Get free slot number\n",
+    "        free_slotNum = min(n_slotUsedTable - np.nonzero(obs[0])[0].size,MAXSLOTS)\n",
     "        \n",
     "        # Get queuing bytes\n",
     "        queueBytes = obs[1][0]\n",
@@ -271,7 +259,7 @@
     "        # Since there are multiple action in one step,\n",
     "        # according to each action, it would have one reward.\n",
     "        # But in ns3gym, the reward type is float, it means it can only return one reward,\n",
-    "        # we use the return info to send multiple reward\n",
+    "        # we use the return info to send multiple reward, throughput, delay\n",
     "        \n",
     "        reward_all = [float(r) for r in info.split(',')]\n",
     "        throughput = reward_all[-2]\n",
@@ -290,14 +278,19 @@
     "        #print(\"Step: \", stepIdx)\n",
     "        #print(\"---obs, reward, done, info: \", obs, reward_all, done, info)\n",
     "        \n",
+    "        # Change data type\n",
     "        obs = np.array(list(obs[0]) + list(obs[1][1:]),dtype=float)\n",
+    "        # padding 0 if K < 3 (Top1_queuedBytes,Top2_queuedBytes) -> (Top1_queuedBytes,Top2_queuedBytes,0)\n",
     "        obs = np.pad(obs,(0, ob_space_n - obs.size), constant_values = 0)\n",
+    "        # Normalize queuebytes\n",
     "        obs[n_slotUsedTable:] = obs[n_slotUsedTable:]/queueBytes if queueBytes != 0 else np.zeros(3)\n",
     "        \n",
     "        top_index = []\n",
     "        for i in range(3):\n",
+    "            # Get the slot used by top K next hop\n",
     "            top_index.append(np.ravel(np.argwhere(_obs[:n_slotUsedTable]==i+1)))\n",
     "        \n",
+    "        # Calculate r_i of each a_i\n",
     "        for act, r in zip(action,reward_all):\n",
     "            if act == -1:\n",
     "                continue\n",
@@ -306,6 +299,7 @@
     "            total_choice_counter += 1\n",
     "            nonLearn_data += 1\n",
     "            \n",
+    "            # Only calculate reward of the non-collision action\n",
     "            if (act not in np.nonzero(_obs[:n_slotUsedTable])[0]):\n",
     "                r += 0.2\n",
     "                \n",
@@ -324,9 +318,9 @@
     "                        for idx in range(closest_distance):\n",
     "                            closest_distance = closest_distance + 1 if obs[act+idx] == 0 else closest_distance\n",
     "                    \n",
-    "                        distance_reward = (1.5-pow((closest_distance/10),0.2))\n",
+    "                        distance_reward = (1.7-pow((closest_distance/10),0.2))\n",
     "                        size_weight = _obs[-(3-i)]\n",
-    "                        max_r =  max((distance_reward*size_weight/3 + throughput/max_throughput/2),max_r) \n",
+    "                        max_r =  max((distance_reward*size_weight*0.9 + throughput/max_throughput/2*0.1),max_r) \n",
     "                        \n",
     "                        if not isChosen:\n",
     "                            isChosen = True\n",
@@ -346,9 +340,9 @@
     "        #if stepIdx % 10000 == 0:\n",
     "        #    print(\"Step: \", stepIdx)\n",
     "        \n",
-    "        #if (total_choice_counter > 5000) and (nonLearn_data > 10) and isTraining:\n",
-    "        #    nonLearn_data = 0\n",
-    "        #    RL.learn()\n",
+    "        if (total_choice_counter > 5000) and (nonLearn_data > 10) and isTraining:\n",
+    "            nonLearn_data = 0\n",
+    "            RL.learn()\n",
     "            \n",
     "        # swap observation\n",
     "        _obs = obs\n",
@@ -429,8 +423,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "eval_model.save_weights('/workspace/exp_replay_model/eval_model_weights')\n",
-    "target_model.save_weights('/workspace/exp_replay_model/target_model_weights')"
+    "# save weight to file\n",
+    "eval_model.save_weights('/workspace/80disweight_20globalthrought_model/eval_model_weights')\n",
+    "target_model.save_weights('/workspace/80disweight_20globalthrought_model/target_model_weights')"
    ]
   },
   {
