--- a/scratch/tdma-rl/training.ipynb
+++ b/scratch/tdma-rl/training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,15 @@
     "from DQN_model import Target_Model\n",
     "import tensorflow as tf\n",
     "\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import os\n",
+    "\n",
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = str(1) # use\n",
+    "config = tf.compat.v1.ConfigProto()\n",
+    "config.gpu_options.allow_growth=True\n",
+    "#config.gpu_options.per_process_gpu_memory_fraction = 0.8\n",
+    "sess = tf.compat.v1.Session(config=config)\n",
+    "tf.compat.v1.keras.backend.set_session(sess)"
    ]
   },
   {
@@ -46,8 +54,9 @@
     "throughput_history = []\n",
     "delay_list = []\n",
     "delay_history = []\n",
-    "\n",
-    "max_throughput = 25*576*15\n",
+    "drop_packet_list = []\n",
+    "drop_packet_history = []\n",
+    "max_throughput = 25*576*15 #  send_25times_per_sec*packetsize*packetnum\n",
     "episode_time = 600\n",
     "# model path (Need to change)\n",
     "eval_model_weights_path = ''#'/workspace/20pkt_traffic_model/eval_model_weights'\n",
@@ -56,18 +65,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Got new port for ns3gm interface:  5793\n",
-      "Start command:  /tf/ns3-gym/waf --run \"tdma-rl --openGymPort=5793 --simSeed=1443124299\"\n",
-      "Started ns3 simulation script, Process Id:  155\n",
-      "Observation space:  Dict(pktBytes:Box(4,), slotUsedTable:Box(32,)) None\n",
-      "Action space:  Box(32,) int64\n",
+      "Got new port for ns3gm interface:  9793\n",
+      "Start command:  /tf/ns3-gym/waf --run \"tdma-rl --openGymPort=9793 --simSeed=1794627202\"\n",
+      "Started ns3 simulation script, Process Id:  10999\n",
+      "Observation space:  Dict(pktBytes:Box(0, 2000, (4,), uint64), slotUsedTable:Box(0, 4, (32,), int64)) None\n",
+      "Action space:  Box(0, 31, (32,), int64) int64\n",
       "n_action:  32\n"
      ]
     }
@@ -92,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,170 +218,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-----------------------episodes:  0  (Training)----------------------\n",
-      "Step:  120000\n",
-      "done\n",
-      "Throughput(Byte) : 89379.0\n",
-      "delay(μs) : 94786.0\n",
-      "-----------------------episodes:  1  (Training)----------------------\n",
-      "Got new port for ns3gm interface:  6864\n",
-      "Start command:  /tf/ns3-gym/waf --run \"tdma-rl --openGymPort=6864 --simSeed=3028169530\"\n",
-      "Started ns3 simulation script, Process Id:  2385\n",
-      "Step:  120000\n",
-      "done\n",
-      "Throughput(Byte) : 89460.0\n",
-      "delay(μs) : 95346.0\n",
-      "-----------------------episodes:  2  (Training)----------------------\n",
-      "Got new port for ns3gm interface:  5936\n",
-      "Start command:  /tf/ns3-gym/waf --run \"tdma-rl --openGymPort=5936 --simSeed=3528264098\"\n",
-      "Started ns3 simulation script, Process Id:  4669\n",
-      "Step:  120000\n",
-      "done\n",
-      "Throughput(Byte) : 89255.0\n",
-      "delay(μs) : 94836.0\n",
-      "-----------------------episodes:  3  (Training)----------------------\n",
-      "Got new port for ns3gm interface:  9562\n",
-      "Start command:  /tf/ns3-gym/waf --run \"tdma-rl --openGymPort=9562 --simSeed=3378715330\"\n",
-      "Started ns3 simulation script, Process Id:  6485\n",
-      "Step:  120000\n",
-      "done\n",
-      "Throughput(Byte) : 89283.0\n",
-      "delay(μs) : 95246.0\n",
-      "-----------------------episodes:  4  (Training)----------------------\n",
-      "Got new port for ns3gm interface:  8609\n",
-      "Start command:  /tf/ns3-gym/waf --run \"tdma-rl --openGymPort=8609 --simSeed=2623972827\"\n",
-      "Started ns3 simulation script, Process Id:  8307\n",
-      "Step:  120000\n",
-      "done\n",
-      "Throughput(Byte) : 89233.0\n",
-      "delay(μs) : 95274.0\n",
-      "-----------------------episodes:  5  (Training)----------------------\n",
-      "Got new port for ns3gm interface:  7252\n",
-      "Start command:  /tf/ns3-gym/waf --run \"tdma-rl --openGymPort=7252 --simSeed=1119884998\"\n",
-      "Started ns3 simulation script, Process Id:  9693\n",
-      "Step:  120000\n",
-      "done\n",
-      "Throughput(Byte) : 89173.0\n",
-      "delay(μs) : 95249.0\n",
-      "-----------------------episodes:  6  (Training)----------------------\n",
-      "Got new port for ns3gm interface:  5850\n",
-      "Start command:  /tf/ns3-gym/waf --run \"tdma-rl --openGymPort=5850 --simSeed=1462194378\"\n",
-      "Started ns3 simulation script, Process Id:  12031\n",
-      "Step:  120000\n",
-      "done\n",
-      "Throughput(Byte) : 89131.0\n",
-      "delay(μs) : 95114.0\n",
-      "-----------------------episodes:  7  (Training)----------------------\n",
-      "Got new port for ns3gm interface:  5780\n",
-      "Start command:  /tf/ns3-gym/waf --run \"tdma-rl --openGymPort=5780 --simSeed=1148030572\"\n",
-      "Started ns3 simulation script, Process Id:  14021\n",
-      "Step:  120000\n",
-      "done\n",
-      "Throughput(Byte) : 89214.0\n",
-      "delay(μs) : 95372.0\n",
-      "-----------------------episodes:  8  (Training)----------------------\n",
-      "Got new port for ns3gm interface:  9090\n",
-      "Start command:  /tf/ns3-gym/waf --run \"tdma-rl --openGymPort=9090 --simSeed=2524108273\"\n",
-      "Started ns3 simulation script, Process Id:  16502\n",
-      "Step:  120000\n",
-      "done\n",
-      "Throughput(Byte) : 88992.0\n",
-      "delay(μs) : 95638.0\n",
-      "-----------------------episodes:  9  (Testing)-----------------------\n",
-      "Got new port for ns3gm interface:  8674\n",
-      "Start command:  /tf/ns3-gym/waf --run \"tdma-rl --openGymPort=8674 --simSeed=3670226127\"\n",
-      "Started ns3 simulation script, Process Id:  18411\n",
-      "Step:  120000\n",
-      "done\n",
-      "Throughput(Byte) : 89756.0\n",
-      "delay(μs) : 87567.0\n",
-      "-----------------------episodes:  10  (Training)----------------------\n",
-      "Got new port for ns3gm interface:  9634\n",
-      "Start command:  /tf/ns3-gym/waf --run \"tdma-rl --openGymPort=9634 --simSeed=190642860\"\n",
-      "Started ns3 simulation script, Process Id:  21709\n",
-      "Step:  120000\n",
-      "done\n",
-      "Throughput(Byte) : 89182.0\n",
-      "delay(μs) : 95290.0\n",
-      "-----------------------episodes:  11  (Training)----------------------\n",
-      "Got new port for ns3gm interface:  7187\n",
-      "Start command:  /tf/ns3-gym/waf --run \"tdma-rl --openGymPort=7187 --simSeed=4010671479\"\n",
-      "Started ns3 simulation script, Process Id:  24336\n",
-      "Step:  120000\n",
-      "done\n",
-      "Throughput(Byte) : 89313.0\n",
-      "delay(μs) : 95339.0\n",
-      "-----------------------episodes:  12  (Training)----------------------\n",
-      "Got new port for ns3gm interface:  5827\n",
-      "Start command:  /tf/ns3-gym/waf --run \"tdma-rl --openGymPort=5827 --simSeed=667832784\"\n",
-      "Started ns3 simulation script, Process Id:  26892\n",
-      "Step:  120000\n",
-      "done\n",
-      "Throughput(Byte) : 89137.0\n",
-      "delay(μs) : 95526.0\n",
-      "-----------------------episodes:  13  (Training)----------------------\n",
-      "Got new port for ns3gm interface:  9072\n",
-      "Start command:  /tf/ns3-gym/waf --run \"tdma-rl --openGymPort=9072 --simSeed=1463572528\"\n",
-      "Started ns3 simulation script, Process Id:  28400\n",
-      "Step:  120000\n",
-      "done\n",
-      "Throughput(Byte) : 89305.0\n",
-      "delay(μs) : 95123.0\n",
-      "-----------------------episodes:  14  (Training)----------------------\n",
-      "Got new port for ns3gm interface:  6557\n",
-      "Start command:  /tf/ns3-gym/waf --run \"tdma-rl --openGymPort=6557 --simSeed=2910708700\"\n",
-      "Started ns3 simulation script, Process Id:  30781\n",
-      "Step:  120000\n",
-      "done\n",
-      "Throughput(Byte) : 89227.0\n",
-      "delay(μs) : 95500.0\n",
-      "-----------------------episodes:  15  (Training)----------------------\n",
-      "Got new port for ns3gm interface:  8380\n",
-      "Start command:  /tf/ns3-gym/waf --run \"tdma-rl --openGymPort=8380 --simSeed=2729141897\"\n",
-      "Started ns3 simulation script, Process Id:  575\n",
-      "Step:  120000\n",
-      "done\n",
-      "Throughput(Byte) : 89313.0\n",
-      "delay(μs) : 95590.0\n",
-      "-----------------------episodes:  16  (Training)----------------------\n",
-      "Got new port for ns3gm interface:  5501\n",
-      "Start command:  /tf/ns3-gym/waf --run \"tdma-rl --openGymPort=5501 --simSeed=3233979718\"\n",
-      "Started ns3 simulation script, Process Id:  2155\n",
-      "Step:  120000\n",
-      "done\n",
-      "Throughput(Byte) : 89148.0\n",
-      "delay(μs) : 95271.0\n",
-      "-----------------------episodes:  17  (Training)----------------------\n",
-      "Got new port for ns3gm interface:  9360\n",
-      "Start command:  /tf/ns3-gym/waf --run \"tdma-rl --openGymPort=9360 --simSeed=2149843674\"\n",
-      "Started ns3 simulation script, Process Id:  3908\n",
-      "Step:  120000\n",
-      "done\n",
-      "Throughput(Byte) : 89234.0\n",
-      "delay(μs) : 95673.0\n",
-      "-----------------------episodes:  18  (Training)----------------------\n",
-      "Got new port for ns3gm interface:  7625\n",
-      "Start command:  /tf/ns3-gym/waf --run \"tdma-rl --openGymPort=7625 --simSeed=3893180276\"\n",
-      "Started ns3 simulation script, Process Id:  5927\n",
-      "Step:  120000\n",
-      "done\n",
-      "Throughput(Byte) : 89198.0\n",
-      "delay(μs) : 95311.0\n",
-      "-----------------------episodes:  19  (Testing)-----------------------\n",
-      "Got new port for ns3gm interface:  7368\n",
-      "Start command:  /tf/ns3-gym/waf --run \"tdma-rl --openGymPort=7368 --simSeed=2889224321\"\n",
-      "Started ns3 simulation script, Process Id:  8479\n",
-      "Step:  120000\n",
-      "done\n",
-      "Throughput(Byte) : 88918.0\n",
-      "delay(μs) : 87656.0\n"
+      "-----------------------episodes:  0  (Training)----------------------\n"
      ]
     }
    ],
