ADD: Now can send args to sim.cc by training.ipynb.

--- a/scratch/tdma-rl/training.ipynb
+++ b/scratch/tdma-rl/training.ipynb
@@ -12,6 +12,7 @@
     "import gym\n",
     "import argparse\n",
     "import numpy as np\n",
+    "np.random.seed(1)\n",
     "from ns3gym import ns3env\n",
     "from DQN_model import DeepQNetwork\n",
     "from DQN_model import Eval_Model\n",
@@ -21,7 +22,7 @@
     "import matplotlib.pyplot as plt\n",
     "import os\n",
     "\n",
-    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = str(1) # use\n",
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = str(1) # use GPU 1\n",
     "config = tf.compat.v1.ConfigProto()\n",
     "config.gpu_options.allow_growth=True\n",
     "#config.gpu_options.per_process_gpu_memory_fraction = 0.8\n",
@@ -72,9 +73,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Got new port for ns3gm interface:  9793\n",
-      "Start command:  /tf/ns3-gym/waf --run \"tdma-rl --openGymPort=9793 --simSeed=1794627202\"\n",
-      "Started ns3 simulation script, Process Id:  10999\n",
+      "Got new port for ns3gm interface:  5078\n",
+      "Start command:  /tf/ns3-gym/waf --run \"tdma-rl --openGymPort=5078 --simSeed=1791095845 pktNum=15\"\n",
+      "Started ns3 simulation script, Process Id:  6845\n",
       "Observation space:  Dict(pktBytes:Box(0, 2000, (4,), uint64), slotUsedTable:Box(0, 4, (32,), int64)) None\n",
       "Action space:  Box(0, 31, (32,), int64) int64\n",
       "n_action:  32\n"
@@ -83,8 +84,11 @@
    ],
    "source": [
     "# create ns3 environment\n",
+    "simArgs = {\n",
+    "    'pktNum':15\n",
+    "}\n",
     "#env = gym.make('ns3-v0') # issue of socket\n",
-    "env = ns3env.Ns3Env(debug=True)\n",
+    "env = ns3env.Ns3Env(simArgs=simArgs,debug=True)\n",
     "\n",
     "#env.reset()\n",
     "\n",
@@ -412,18 +416,33 @@
    "source": [
     "# step counter of each episode\n",
     "plt.plot(optimized_choice)\n",
+    "plt.xlabel('Episodes') \n",
+    "plt.ylabel('') \n",
+    "plt.title(\"Optimized Choice\")\n",
     "plt.show()\n",
     "\n",
     "plt.plot(throughput_history)\n",
+    "plt.xlabel('Episodes') \n",
+    "plt.ylabel('Bytes') \n",
+    "plt.title(\"Throughput History\")\n",
     "plt.show()\n",
     "\n",
     "plt.plot(throughput_list)\n",
+    "plt.xlabel('Episodes') \n",
+    "plt.ylabel('Bytes') \n",
+    "plt.title(\"Throughput\")\n",
     "plt.show()\n",
     "\n",
     "plt.plot(delay_history)\n",
+    "plt.xlabel('Episodes') \n",
+    "plt.ylabel('us') \n",
+    "plt.title(\"Delay History\")\n",
     "plt.show()\n",
     "\n",
     "plt.plot(delay_list)\n",
+    "plt.xlabel('Episodes') \n",
+    "plt.ylabel('us') \n",
+    "plt.title(\"Delay\")\n",
     "plt.show()"
    ]
   },
@@ -433,8 +452,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print (sum(throughput_list)/len(throughput_list))\n",
-    "print (sum(delay_list)/len(delay_list))"
+    "print (\"Avg Throughput:{}\".format(sum(throughput_list)/len(throughput_list)))\n",
+    "print (\"Avg Delay:{}\".format(sum(delay_list)/len(delay_list)))"
    ]
   },
   {
