bugFix: tensorflow limit GPU memory.

--- a/scratch/tdma-rl/training.ipynb
+++ b/scratch/tdma-rl/training.ipynb
@@ -4,7 +4,15 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')]\n"
+     ]
+    }
+   ],
    "source": [
     "#!/usr/bin/env python3\n",
     "# -*- coding: utf-8 -*-\n",
@@ -22,12 +30,11 @@
     "import matplotlib.pyplot as plt\n",
     "import os\n",
     "\n",
-    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = str(1) # use GPU 1\n",
-    "config = tf.compat.v1.ConfigProto()\n",
-    "config.gpu_options.allow_growth=True\n",
-    "#config.gpu_options.per_process_gpu_memory_fraction = 0.8\n",
-    "sess = tf.compat.v1.Session(config=config)\n",
-    "tf.compat.v1.keras.backend.set_session(sess)"
+    "print(tf.config.list_physical_devices('GPU'))\n",
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = str(\"0\") # use GPU 0\n",
+    "gpu_devices = tf.config.experimental.list_physical_devices('GPU')\n",
+    "for device in gpu_devices:\n",
+    "    tf.config.experimental.set_memory_growth(device, True)"
    ]
   },
   {
@@ -154,9 +161,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Got new port for ns3gm interface:  8472\n",
-      "Start command:  /tf/ns3-gym/waf --run \"tdma-rl --openGymPort=8472 --simSeed=1791095845 pktNum=5\"\n",
-      "Started ns3 simulation script, Process Id:  89\n",
+      "Got new port for ns3gm interface:  5551\n",
+      "Start command:  /tf/ns3-gym/waf --run \"tdma-rl --openGymPort=5551 --simSeed=1791095845 pktNum=5\"\n",
+      "Started ns3 simulation script, Process Id:  53\n",
       "Observation space:  Dict(pktBytes:Box(0, 2000, (4,), uint64), slotUsedTable:Box(0, 4, (32,), int64)) None\n",
       "Action space:  Box(0, 31, (32,), int64) int64\n",
       "n_action:  32\n",
@@ -182,7 +189,6 @@
     "    env = ns3env.Ns3Env(simArgs=simArgs,debug=True)\n",
     "\n",
     "    #env.reset()\n",
-    "\n",
     "    ob_space = env.observation_space\n",
     "    ac_space = env.action_space\n",
     "    ob_space_n = ob_space['slotUsedTable'].shape[0] + ob_space['pktBytes'].shape[0] - 1\n",
@@ -397,22 +403,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Got new port for ns3gm interface:  5078\n",
-      "Start command:  /tf/ns3-gym/waf --run \"tdma-rl --openGymPort=5078 --simSeed=1791095845 pktNum=15\"\n",
-      "Started ns3 simulation script, Process Id:  6845\n",
-      "Observation space:  Dict(pktBytes:Box(0, 2000, (4,), uint64), slotUsedTable:Box(0, 4, (32,), int64)) None\n",
-      "Action space:  Box(0, 31, (32,), int64) int64\n",
-      "n_action:  32\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# # create ns3 environment\n",
     "# simArgs = {\n",
@@ -438,15 +431,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-----------------------episodes:  0  (Training)----------------------\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# for episode in range(training_episodes):\n",
     "#     # For each 10 round, would have 1 round stop update model and select slot without 10% random select\n",
