Still modify the drop count

--- a/scratch/tdma-rl/training.ipynb
+++ b/scratch/tdma-rl/training.ipynb
@@ -4,7 +4,15 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU'), PhysicalDevice(name='/physical_device:GPU:1', device_type='GPU')]\n"
+     ]
+    }
+   ],
    "source": [
     "#!/usr/bin/env python3\n",
     "# -*- coding: utf-8 -*-\n",
@@ -22,12 +30,17 @@
     "import matplotlib.pyplot as plt\n",
     "import os\n",
     "\n",
-    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = str(1) # use GPU 1\n",
-    "config = tf.compat.v1.ConfigProto()\n",
-    "config.gpu_options.allow_growth=True\n",
-    "#config.gpu_options.per_process_gpu_memory_fraction = 0.8\n",
-    "sess = tf.compat.v1.Session(config=config)\n",
-    "tf.compat.v1.keras.backend.set_session(sess)"
+    "# os.environ[\"CUDA_VISIBLE_DEVICES\"] = str(1) # use GPU 1\n",
+    "# config = tf.compat.v1.ConfigProto()\n",
+    "# config.gpu_options.allow_growth=True\n",
+    "# #config.gpu_options.per_process_gpu_memory_fraction = 0.8\n",
+    "# sess = tf.compat.v1.Session(config=config)\n",
+    "# tf.compat.v1.keras.backend.set_session(sess)\n",
+    "print(tf.config.list_physical_devices('GPU'))\n",
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = str(\"1\") # use GPU 1\n",
+    "gpu_devices = tf.config.experimental.list_physical_devices('GPU')\n",
+    "for device in gpu_devices:\n",
+    "    tf.config.experimental.set_memory_growth(device, True)"
    ]
   },
   {
@@ -154,14 +167,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Got new port for ns3gm interface:  8472\n",
-      "Start command:  /tf/ns3-gym/waf --run \"tdma-rl --openGymPort=8472 --simSeed=1791095845 pktNum=5\"\n",
-      "Started ns3 simulation script, Process Id:  89\n",
+      "Got new port for ns3gm interface:  9819\n",
+      "Start command:  /tf/ns3-gym/waf --run \"tdma-rl --openGymPort=9819 --simSeed=1791095845 pktNum=5\"\n",
+      "Started ns3 simulation script, Process Id:  30017\n",
       "Observation space:  Dict(pktBytes:Box(0, 2000, (4,), uint64), slotUsedTable:Box(0, 4, (32,), int64)) None\n",
       "Action space:  Box(0, 31, (32,), int64) int64\n",
       "n_action:  32\n",
       "Create new model\n",
-      "-----------------------episodes:  0  (Training)----------------------\n"
+      "-----------------------episodes:  0  (Training)----------------------\n",
+      "Step:  120000\n",
+      "done\n",
+      "Throughput(Byte) : 89283.0\n",
+      "delay(μs) : 93290.0\n",
+      "-----------------------episodes:  1  (Training)----------------------\n",
+      "Got new port for ns3gm interface:  7734\n",
+      "Start command:  /tf/ns3-gym/waf --run \"tdma-rl --openGymPort=7734 --simSeed=2223217466 pktNum=5\"\n",
+      "Started ns3 simulation script, Process Id:  758\n"
      ]
     }
    ],
@@ -397,22 +418,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Got new port for ns3gm interface:  5078\n",
-      "Start command:  /tf/ns3-gym/waf --run \"tdma-rl --openGymPort=5078 --simSeed=1791095845 pktNum=15\"\n",
-      "Started ns3 simulation script, Process Id:  6845\n",
-      "Observation space:  Dict(pktBytes:Box(0, 2000, (4,), uint64), slotUsedTable:Box(0, 4, (32,), int64)) None\n",
-      "Action space:  Box(0, 31, (32,), int64) int64\n",
-      "n_action:  32\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# # create ns3 environment\n",
     "# simArgs = {\n",
@@ -438,15 +446,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-----------------------episodes:  0  (Training)----------------------\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# for episode in range(training_episodes):\n",
     "#     # For each 10 round, would have 1 round stop update model and select slot without 10% random select\n",
